<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.my.a06.MainActivity"
    android:background="@color/colorBackground">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_height="?android:actionBarSize"
        android:background="@color/status_bar_color"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/scrollview_margin_left"
        android:layout_marginRight="@dimen/scrollview_margin_right"
        android:layout_marginTop="@dimen/scrollview_margin_top"
        android:fillViewport="true"
        android:layout_below="@+id/toolbar">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:weightSum="@string/weight0">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="@string/weight1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chapter"
                    android:layout_centerVertical="false"
                    android:id="@+id/chapterTextView"
                    style="@style/descriptionText"
                    android:clickable="true"
                    android:onClick="onTextViewClick" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="@string/weight2">

                <TextView
                    android:layout_width="@dimen/status_button"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:gravity="center"
                    android:id="@+id/statusTextView"
                    android:background="@drawable/status_shape"
                    android:textColor="@color/status_text_color"
                    style="@style/valueText"
                    android:layout_centerVertical="true"
                    android:clickable="true"
                    android:onClick="onTextViewClick" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/separator_scrollview"
                android:background="@color/separator_scrollview_color"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="@string/weight3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start"
                    android:id="@+id/startTextView"
                    style="@style/valueText"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:clickable="true"
                    android:onClick="onTextViewClick" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/startDescription"
                    style="@style/descriptionText"
                    android:id="@+id/startDescriptionTextView"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:clickable="true"
                    android:onClick="onTextViewClick" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/separator_scrollview"
                android:background="@color/separator_scrollview_color"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="@string/weight4">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registr"
                    android:id="@+id/registerTextView"
                    style="@style/valueText"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:clickable="true"
                    android:onClick="onTextViewClick" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registrDescription"
                    style="@style/descriptionText"
                    android:id="@+id/registerDescriptionTextView"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:clickable="true"
                    android:onClick="onTextViewClick" />

            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/separator_scrollview"
                android:background="@color/separator_scrollview_color"/>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="@string/weight5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deadline"
                    android:id="@+id/deadlineTextView"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    style="@style/valueText"
                    android:clickable="true"
                    android:onClick="onTextViewClick" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deadlineDescription"
                    style="@style/descriptionText"
                    android:id="@+id/deadlineDescriptionTextView"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:clickable="true"
                    android:onClick="onTextViewClick" />

            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/separator_scrollview"
                android:background="@color/separator_scrollview_color"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="@string/weight6">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answerable"
                    android:id="@+id/answerableTextView"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    style="@style/valueText"
                    android:clickable="true"
                    android:onClick="onTextViewClick" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answerableDescription"
                    style="@style/descriptionText"
                    android:id="@+id/answerableDescriptionTextView"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:clickable="true"
                    android:onClick="onTextViewClick" />

            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/separator_scrollview"
                android:background="@color/separator_scrollview_color"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="@string/weight7">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:id="@+id/descriptionTextView"
                style="@style/descriptionText"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:onClick="onTextViewClick" />

            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/my_recycler_view"
                android:scrollbars="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>


    </ScrollView>


</RelativeLayout>
